# dev-dashboard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/team/: kai-pm.md  mio-devrel.md  rin-designer.md  ryu-qa.md  sora-architect.md  zen-backend.md
docs/plans/: 2026-03-05-dev-dashboard-implementation.md  2026-03-05-team-structure-design.md  2026-03-05-web-dashboard-design.md
src/: lib.rs  main.rs
src/app/: cli.rs  event.rs  mod.rs  state.rs
src/data/: ci_provider.rs  fetcher.rs  git_provider.rs  github_config.rs  mod.rs  models.rs  quality_provider.rs  task_provider.rs
src/ui/: layout.rs  mod.rs  terminal.rs
src/ui/panels/: ci_panel.rs  git_panel.rs  mod.rs  quality_panel.rs  task_panel.rs
src/web/: api.rs
static/: index.html
static/assets/: index-C7TvryMW.css  index-IpXdcgit.js
tests/: app_test.rs  ci_provider_test.rs  fetcher_test.rs  git_provider_test.rs  integration_test.rs  quality_provider_test.rs  task_provider_test.rs
web/: index.html  package-lock.json  vite.config.js
web/src/: App.jsx
web/src/components/: CiPanel.jsx  GitPanel.jsx  QualityPanel.jsx  Settings.jsx  TaskPanel.jsx
web/src/lib/: github.js
