[package]
name = "dev-dashboard"
version = "0.1.0"
edition = "2021"
description = "Terminal dashboard for development status visualization"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
octocrab = "0.44"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
assert_cmd = "2"
predicates = "3"
